--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
         <title>kishore_Sk</title>
+        <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/23/23324.png?w=740&t=st=1685675991~exp=1685676591~hmac=53965da154d734d2a55eb3b51626728483a909e6dc6253c4bb6374e9c068f831">
     </head>
     <body>
         <!--===== HEADER =====-->
@@ -40,7 +41,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Kishore Kumar</span><br> Developer</h1>
 
-                    <a href="https://drive.google.com/file/d/1A3Qyui-IA7g-ILGDtCf_aMPg0c48FDGP/view?usp=share_link" class="button">RESUME</a>
+                    <a href="assets/img/SK_.pdf" class="button">RESUME</a>
                 </div>
 
                 <div class="home__social">
