--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                     <a href="https://instagram.com/sk_kishore_sk?igshid=YmMyMTA2M2Y=" class="home__social-icon"><i class='bx bxl-instagram' ></i></a>
                     <a href="https://github.com/Kishore37sk" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                     <a href="https://twitter.com/sk_kishore_sk?t=4CRZbMzyEWxuAfIvryzQ1g&s=09" class="home__social-icon"><i class='bx bxl-twitter' ></i></a>
+                    <a href="https://discord.com/users/896348085582725160" class="home__social-icon"><i class='bx bxl-discord' ></i></a>
                 </div>
 
                 <div class="home__img">
@@ -181,6 +182,7 @@
                 <a href="https://www.instagram.com/sk_kishore_sk/?igshid=YmMyMTA2M2Y%3D" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
                 <a href="https://github.com/Kishore37sk" class="footer__icon"><i class='bx bxl-github' ></i></a>
                 <a href="https://twitter.com/sk_kishore_sk?t=4CRZbMzyEWxuAfIvryzQ1g&s=09" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+                <a href="https://discord.com/users/896348085582725160" class="footer__icon"><i class='bx bxl-discord' ></i></a>
             </div>
             <p class="footer__copy">&#169; All rigths reserved</p>
         </footer>
