--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Kishore Kumar</span><br> Developer</h1>
 
-                    <a href="assets/img/SK_.pdf" class="button">RESUME</a>
+                    <a href="assets/img/Sk_.pdf" class="button">RESUME</a>
                 </div>
 
                 <div class="home__social">
