--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <h2 class="section-title">Work</h2>
 
                 <div class="work__container bd-grid">
-                    <a href="" class="work__img">
+                    <a href="https://github.com/Kishore37sk/Face-mask-Detaction.git" class="work__img">
                         <img src="assets/img/2.jpg" alt="">
                         <center>
                             <p><span class="home__title-color">FACE MASK DETECTION USING VGG 16</span> </p>
